# management

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  database.py  main.py  security.py
app/static/: app.js  index.html  styles.css
db/: schema.sql  seed.sql
scripts/: deploy.sh  init_db.py  smoke_test.sh
tests/: test_api.py
