[project]
name = "library-management-system"
version = "1.0.0"
description = "FastAPI and SQLite based library management system for course design."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
